// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildComposeFile snapshots > builds the file with a custom port 1`] = `
"services:
  app:
    image: "ghcr.io/henrik-dmg/wash-cycle-tracker:1"
    restart: unless-stopped
    ports:
      - "8080:3000"
    environment:
      DATABASE_URL: "file:./data/wash-cycle-tracker.db"
    volumes:
      - "db-data:/app/data"

volumes:
  db-data:
"
`;

exports[`buildComposeFile snapshots > builds the file with a password 1`] = `
"services:
  app:
    image: "ghcr.io/henrik-dmg/wash-cycle-tracker:1"
    restart: unless-stopped
    ports:
      - "3000:3000"
    environment:
      DATABASE_URL: "file:./data/wash-cycle-tracker.db"
      APP_PASSWORD: "hunter2"
      SESSION_SECRET: "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
    volumes:
      - "db-data:/app/data"

volumes:
  db-data:
"
`;

exports[`buildComposeFile snapshots > builds the file without a password 1`] = `
"services:
  app:
    image: "ghcr.io/henrik-dmg/wash-cycle-tracker:1"
    restart: unless-stopped
    ports:
      - "3000:3000"
    environment:
      DATABASE_URL: "file:./data/wash-cycle-tracker.db"
    volumes:
      - "db-data:/app/data"

volumes:
  db-data:
"
`;
